--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,14 @@
     <!-- Remove CDN scripts -->
     <!-- <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script> -->
     <!-- <script src="https://unpkg.com/buffer@6.0.3/index.js"></script> -->
-    <!-- <script src="https://unpkg.com/@coral-xyz/anchor@0.31.0/dist/browser/index.js"></script> --> 
+    <!-- <script src="https://unpkg.com/@coral-xyz/anchor@0.31.0/dist/browser/index.js"></script> -->
 </head>
+
 <body>
     <header>
         <h1>Solana Oracle - Top Tokens</h1>
-        <p>Aggregated data from program: <code id="program-id">Loading...</code></p>
-        <p>Aggregator account: <code id="aggregator-pda">Loading...</code></p>
+        <p>Program ID: <code id="program-id">Loading...</code></p>
+        <p>Storage Account: <code id="aggregator-pda">Loading...</code></p>
     </header>
 
     <main>
@@ -23,7 +25,7 @@
             <span id="loading-indicator" style="display: none;"> Loading...</span>
             <p>Last Updated: <span id="last-updated">Never</span></p>
         </div>
-        
+
         <div id="error-message" class="error" style="display: none;"></div>
 
         <table id="token-table">
@@ -34,12 +36,14 @@
                     <th>Dominance</th>
                     <th>Address</th>
                     <th>Price Feed ID</th>
-                    <th>Authority</th> 
+                    <!-- Remove Authority Header -->
                 </tr>
             </thead>
             <tbody id="token-table-body">
                 <!-- Data will be populated here by script.js -->
-                <tr><td colspan="6">Loading data...</td></tr>
+                <tr>
+                    <td colspan="5">Loading data...</td>
+                </tr> <!-- Update colspan -->
             </tbody>
         </table>
     </main>
@@ -51,4 +55,5 @@
     <!-- Update script tag -->
     <script type="module" src="/main.js"></script>
 </body>
-</html> 
+
+</html>
