address link cluser mainnet & pricefeed header link

--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
                     <th>Symbol</th>
                     <th>Dominance</th>
                     <th>Address</th>
-                    <th>Price Feed ID</th>
-                    <!-- Remove Authority Header -->
+                    <!-- Updated Price Feed ID Header -->
+                    <th>
+                        <a href="https://www.pyth.network/developers/price-feed-ids" target="_blank"
+                            rel="noopener noreferrer">
+                            Price Feed ID
+                        </a>
+                    </th>
                 </tr>
             </thead>
             <tbody id="token-table-body">
