sum dominance display

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                     <td colspan="5">Loading data...</td>
                 </tr> <!-- Update colspan -->
             </tbody>
+            <!-- Add Table Footer for Totals -->
+            <tfoot id="token-table-footer">
+                 <tr>
+                     <td colspan="2" style="text-align: right; font-weight: bold;">Total Dominance:</td>
+                     <td id="total-dominance-cell" style="text-align: right; font-weight: bold;" colspan="3">Calculating...</td> <!-- Span remaining 3 columns -->
+                 </tr>
+             </tfoot>
         </table>
     </main>
 
