--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <th>Address</th>
                     <!-- Updated Price Feed ID Header -->
                     <th>
-                        <a href="https://www.pyth.network/developers/price-feed-ids" target="_blank"
+                        <a href="https://www.pyth.network/developers/price-feed-ids#solana-price-feed-accounts" target="_blank"
                             rel="noopener noreferrer">
                             Price Feed ID
                         </a>
