oracle changes (include timestamp)

--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
                         <th>#</th>
                         <th>Symbol</th>
                         <th>Dominance</th>
-                        <th>Address</th>
-                        <!-- Updated Price Feed ID Header -->
+                        <th>Token Address</th>
                         <th>
                             <a href="https://www.pyth.network/developers/price-feed-ids#solana-price-feed-accounts" target="_blank"
                                 rel="noopener noreferrer">
                                 Price Feed ID
                             </a>
                         </th>
+                        <th>Timestamp</th>
                     </tr>
                 </thead>
                 <tbody id="token-table-body">
                     <!-- Data will be populated here by script.js -->
                     <tr>
-                        <td colspan="5">Loading data...</td>
+                        <td colspan="6">Loading data...</td>
                     </tr> <!-- Update colspan -->
                 </tbody>
                 <!-- Add Table Footer for Totals -->
                 <tfoot id="token-table-footer">
                      <tr>
                          <td colspan="2" style="text-align: right; font-weight: bold;">Total Dominance:</td>
-                         <td id="total-dominance-cell" style="text-align: right; font-weight: bold;" colspan="3">Calculating...</td> <!-- Span remaining 3 columns -->
+                         <td id="total-dominance-cell" style="text-align: right; font-weight: bold;" colspan="4">Calculating...</td> <!-- Span remaining 4 columns -->
                      </tr>
                  </tfoot>
             </table>
